--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -13,6 +13,61 @@
     :root{
         --hauteur-menu: 20px;
     }
+
+    /* accueil */
+    .background_blue {
+        background-color: #37388B;
+        margin-top:-11ex;
+        
+        margin-bottom: -7em;
+        padding-bottom: 1em;
+      }
+
+    .corps_accueil {
+        margin-top: 3em;
+        margin-left: 0%;
+        margin-right: 0%;
+        border: 1ex solid #37388B;
+        flex-direction: column;
+    }
+    
+    .brochure {
+        width: auto;
+        height: auto;
+        margin-left: 0ex;
+        border: 1ex solid #37388B;
+    }
+    
+      .text_accueil h3
+      {
+        margin-top: 0.9em;
+        margin-bottom: 0.2em;
+        font-size: 34px;
+      }
+
+      p.dotted
+    { 
+        border-bottom: 3px dashed black;
+        font-family:'Courier New', Courier, monospace;
+        width: 100%;
+        align-self: center;
+        margin-bottom: 1em;
+    }
+      
+      .text_accueil p {
+        font-size: 26px;
+      }
+      
+      .text_accueil ul {
+        font-size: 95px;
+        margin-left: 1.5ex;
+        line-height: 20%;
+        margin-bottom: 1ex;
+      }
+  
+      .text_accueil li span {
+          font-size: 22px;
+        }
 }
 
 @media (min-width: 700px) and (max-width: 1000px)
@@ -29,6 +84,61 @@
     :root{
         --hauteur-menu: 30px;
     }
+
+    /* accueil */
+    .background_blue {
+        background-color: #37388B;
+        margin-top:-11ex;
+        
+        margin-bottom: -7em;
+        padding-bottom: 1em;
+      }
+
+    .corps_accueil {
+        margin-top: 3em;
+        margin-left: 0%;
+        margin-right: 0%;
+        border: 1ex solid #37388B;
+        flex-direction: column;
+    }
+    
+    .brochure {
+        width: auto;
+        height: auto;
+        margin-left: 0ex;
+        border: 1em solid #37388B;
+    }
+    
+      .text_accueil h3
+      {
+        margin-top: 0.9em;
+        margin-bottom: 0.2em;
+        font-size: 34px;
+      }
+
+      p.dotted
+    { 
+        border-bottom: 3px dashed black;
+        font-family:'Courier New', Courier, monospace;
+        width: 100%;
+        align-self: center;
+        margin-bottom: 1em;
+    }
+      
+      .text_accueil p {
+        font-size: 26px;
+      }
+      
+      .text_accueil ul {
+        font-size: 95px;
+        margin-left: 1.5ex;
+        line-height: 20%;
+        margin-bottom: 1ex;
+      }
+  
+      .text_accueil li span {
+          font-size: 22px;
+        }
 }
 
 
@@ -46,6 +156,44 @@
     :root{
         --hauteur-menu: 40px;
     }
+
+    /* accueil */
+    .corps_accueil {
+        margin-top: 3em;
+        margin-left: 0%;
+        margin-right: 0%;
+        border: 0.5em solid #37388B;
+      }
+
+    .text_accueil h3
+    {
+      margin-top: 0.2em;
+      margin-bottom: 0.1ex;
+      font-size: 32px;
+    }
+    
+    p.dotted
+    { 
+        border-bottom: 3px dashed black;
+        font-family:'Courier New', Courier, monospace;
+        width: 100%;
+        align-self: center;
+        margin-bottom: 0.1em;
+    }
+
+    .text_accueil p {
+      font-size: 22px;
+    }
+    
+    .text_accueil ul {
+      font-size: 60px;
+      margin-left: 1.7ex;
+      line-height: 25%;
+    }
+
+    .text_accueil li span {
+        font-size: 22px;
+      }
 }
 
 
@@ -63,15 +211,167 @@
     :root{
         --hauteur-menu: 50px;
     }
+
+    /* accueil */
+    .corps_accueil {
+        margin-top: 3em;
+        margin-left: 0%;
+        margin-right: 0%;
+        border: 1em solid #37388B;
+      }
+
+    .text_accueil h3
+    {
+      margin-top: 0.2em;
+      margin-bottom: 0.1ex;
+      font-size: 38px;
+    }
+    
+    p.dotted
+    { 
+        border-bottom: 3px dashed black;
+        font-family:'Courier New', Courier, monospace;
+        width: 100%;
+        align-self: center;
+        margin-bottom: 0.1em;
+    }
+
+    .text_accueil p {
+      font-size: 26px;
+    }
+    
+    .text_accueil ul {
+      font-size: 95px;
+      margin-left: 1.7ex;
+      line-height: 25%;
+    }
+
+    .text_accueil li span {
+        font-size: 26px;
+      }
+    
 }
 
+/* lèrement inférieur à celui d'en dessous screen, pour l'accueil */
+@media (min-width: 1685px) and (max-width: 1700px)
+{ 
+    .text_accueil h3
+    {
+      margin-top: 0.8em;
+      margin-bottom: 0.2em;
+      font-size: 38px;
+    }
+    
+    .text_accueil p {
+      font-size: 30px;
+    }
+    
+    .text_accueil ul {
+      font-size: 95px;
+      margin-left: 1.7ex;
+      line-height: 40%;
+    }
+
+    .text_accueil li span {
+        font-size: 32px;
+      }
+}
+
+/* lèrement inférieur à celui d'en dessous screen, pour l'accueil */
+@media (min-width: 1700px) and (max-width: 1750px)
+{ 
+    .text_accueil h3
+    {
+      margin-top: 0.9em;
+      margin-bottom: 0.2em;
+      font-size: 38px;
+    }
+    
+    .text_accueil p {
+      font-size: 30px;
+    }
+    
+    .text_accueil ul {
+      font-size: 95px;
+      margin-left: 1.7ex;
+      line-height: 40%;
+    }
+
+    .text_accueil li span {
+        font-size: 32px;
+      }
+}
+
+/* lèrement inférieur à 1080p screen, pour l'accueil */
+@media (min-width: 1750px) and (max-width: 1900px)
+{ 
+    .text_accueil h3
+    {
+      margin-top: 0.9em;
+      margin-bottom: 0.2em;
+      font-size: 38px;
+    }
+    
+    .text_accueil p {
+      font-size: 30px;
+    }
+    
+    .text_accueil ul {
+      font-size: 95px;
+      margin-left: 1.7ex;
+      line-height: 50%;
+    }
+
+    .text_accueil li span {
+        font-size: 34px;
+      }
+}
 
 /* 1080p screen */
-@media (min-width: 1685px) and (max-width: 3000px)
+@media (min-width: 1685px) and (max-width: 2300px)
 { 
 }
 
 /* 1440p screen */
+@media (min-width: 2300px) and (max-width: 3000px)
+{ 
+    nav {
+        font-size: 40px;
+      }
+    .menu-deroulant > a:after{
+    font-size: 34px;
+    }
+    .titre{
+        font-size: 40px;
+      }
+    :root{
+        --hauteur-menu: 80px;
+    }
+
+    /* accueil */
+    .text_accueil h3
+    {
+      margin-top: 1em;
+      margin-bottom: 0.2em;
+      font-size: 50px;
+    }
+    
+    .text_accueil p {
+      font-size: 40px;
+    }
+    
+    .text_accueil ul {
+      font-size: 95px;
+      margin-left: 1.7ex;
+      line-height: 75%;
+    }
+
+    .text_accueil li span {
+        font-size: 46px;
+      }
+}
+
+/* 4K screen */
 @media (min-width: 3000px)
 { 
     nav {
